[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
thiserror = "1.0.58"

[dev-dependencies]
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
